# stl-browser

./: CLAUDE.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-04-18-phase3-scan-metadata.md  2026-04-25-light-mode-and-theme-menu.md  2026-05-03-grid-context-menu.md
spikes/: .gitignore  RESULTS.md
spikes/spike1-offscreen-worker/: README.md  gen-stl.mjs  index.html  main.js  render-worker.js
spikes/spike2-asset-protocol/: Cargo.toml  README.md  gen-fixture.mjs  tauri.conf.json
spikes/spike2-asset-protocol/src/: main.rs
spikes/spike3-raw-ipc/: Cargo.toml  README.md  tauri.conf.json
spikes/spike3-raw-ipc/capabilities/: default.json
spikes/spike3-raw-ipc/src/: main.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  i18n.rs  lib.rs  main.rs  menu.rs  state.rs  types.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/db/: files.rs  libraries.rs  mesh.rs  migrations.rs  mod.rs  settings.rs  thumbnails.rs
src-tauri/src/ipc/: files.rs  libraries.rs  mod.rs  system.rs  thumbnails.rs
src-tauri/src/mesh/: metrics.rs  mod.rs  obj.rs  stl.rs  threemf.rs
src-tauri/src/scan/: mod.rs  walker.rs  watcher.rs
src/components/: Grid.tsx  GridSizeSlider.tsx  GridTile.tsx  GridTileContextMenu.tsx  Inspector.tsx  List.tsx  ResizeHandle.tsx  SearchBox.tsx  Sidebar.tsx  SortDropdown.tsx  Thumbnail.tsx  ViewModeToggle.tsx
src/components/viewer/: AppearanceControls.tsx  (+6 more)
src/hooks/: useKeyboardNav.ts  useLanguage.ts  useLibraries.ts  useLiveEvents.ts  useResizablePanes.ts  useTheme.ts  useThumbnailBackfill.ts  useViewerAppearance.ts  useVisibleFiles.ts
src/i18n/: index.ts  types.d.ts
src/ipc/: commands.ts  events.ts
src/lib/: color.ts  format.ts  fuse.ts
src/mocks/: fixtures.ts
src/state/: files.ts  store.ts  thumbnails.ts
src/thumbs/: queue.ts  render-worker.ts
(+3 files in other folders)
