[package]
name = "stl-browser"
version = "0.1.0"
description = "Visual preview browser for 3D printing files"
authors = ["Seborider"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stl_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
ts-rs = { version = "7", features = ["serde-compat"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
blake3 = "1"
stl_io = "0.7"
tobj = "4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.31"
notify = "6"
notify-debouncer-full = "0.3"
tauri-plugin-shell = "2"
sys-locale = "0.3"
