[package]
name = "spike2-asset-protocol"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "spike2-asset-protocol"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
