[package]
name = "spike3-raw-ipc"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "spike3-raw-ipc"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
